--- a/css/styles.css
+++ b/css/styles.css
@@ -56,3 +56,8 @@ body {
     font-size: 50px; }
   .main-banner-col__subtitle, .main-banner-col__description {
     color: #fff; }
+
+.principal {
+  margin-top: 50px;
+  background: #fff;
+  padding-top: 20px; }
