--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,3 +11,5 @@ $primary-color: #007bff;
 @import "theme/banner";
 @import "theme/main";
 @import "theme/main-nav";
+@import "layout/contenedor";
+@import "theme/footer";
