--- a/scss/theme/_banner.scss
+++ b/scss/theme/_banner.scss
@@ -4,7 +4,7 @@
 
     &::before{
         content: "";
-        background: linear-gradient(to top, black 10%);
+        // background: linear-gradient(to top, black 10%);
         width: 100%;
         height: 100%;
         position: absolute;
@@ -15,8 +15,8 @@
 
     &__data{
         position: absolute;
-        top: 50%;
-        left: 50%;
+        top: 60%;
+        left: 87%;
         transform: translate(-50%, -50%);
         display: flex;
     }
@@ -24,7 +24,7 @@
     &__title{
         color: $primary-color;
         font-family: 'Merienda One', cursive;        
-        font-size: 50px; //numero magico corregir
+        font-size: 30px; //numero magico corregir
     }
 
     &__subtitle,
