--- a/scss/theme/_main-nav.scss
+++ b/scss/theme/_main-nav.scss
@@ -1,11 +1,35 @@
+.accordion{
+    margin: 5px 4px 5px;
+    
+    
+
+}
+
 .main-menu{
+
+    padding: 0;
+    // margin-left: 1px,     
 
     &__card{
         padding: 0;       
+        margin-bottom: 3px;        
     }
     
     &__button{
         width: 100%;        
+        border: 1px solid #BABABA;
+        background: linear-gradient(top, #FFFFFF 0, #A8A8A8 100%) no-repeat;
+        height: 30px;
+        color: #003366;
+        text-align: initial;
+        line-height: 1em;
+        
+        &:hover{
+            border: 1px solid #BABABA;
+            background: linear-gradient(top, #005CB8 0, #00080F 100%) no-repeat;
+            color: #fff;
+            text-decoration: none;
+        }
     }
 
     &__cb{
