--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,13 @@
 body {
   background: #f2f2f2; }
 
+.container {
+  background: #edf7f7;
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #FFFFFF), to(#c9e6e8)) no-repeat;
+  background: -webkit-linear-gradient(bottom, #FFFFFF 0, #c9e6e8 100%) no-repeat;
+  background: -o-linear-gradient(bottom, #FFFFFF 0, #c9e6e8 100%) no-repeat;
+  background: linear-gradient(bottom, #FFFFFF 0, #c9e6e8 100%) no-repeat; }
+
 header {
   overflow: hidden; }
 
@@ -32,9 +39,6 @@ header {
   .main-banner-col__subtitle, .main-banner-col__description {
     color: #fff; }
 
-.principal {
-  background: #fff; }
-
 .main-main {
   padding-left: 0;
   padding-right: 0; }
@@ -61,25 +65,24 @@ header {
     padding: 0;
     margin-bottom: 3px; }
   .main-menu__link {
-    margin-bottom: 3px; }
+    margin-bottom: 3px;
+    background: -webkit-gradient(linear, right top, left top, color-stop(0, #FFFFFF), color-stop(200%, #c9e6e8)) no-repeat;
+    background: -webkit-linear-gradient(right, #FFFFFF 0, #c9e6e8 200%) no-repeat;
+    background: -o-linear-gradient(right, #FFFFFF 0, #c9e6e8 200%) no-repeat;
+    background: linear-gradient(right, #FFFFFF 0, #c9e6e8 200%) no-repeat; }
   .main-menu__button {
     width: 100%;
-    border: 1px solid #BABABA;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #FFFFFF), to(#A8A8A8)) no-repeat;
-    background: -webkit-linear-gradient(top, #FFFFFF 0, #A8A8A8 100%) no-repeat;
-    background: -o-linear-gradient(top, #FFFFFF 0, #A8A8A8 100%) no-repeat;
-    background: linear-gradient(top, #FFFFFF 0, #A8A8A8 100%) no-repeat;
-    height: 30px;
+    border: 1px solid #003366;
     color: #003366;
     text-align: initial;
     line-height: 1em; }
     .main-menu__button:hover {
       border: 1px solid #BABABA;
-      background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #005CB8), to(#00080F)) no-repeat;
-      background: -webkit-linear-gradient(top, #005CB8 0, #00080F 100%) no-repeat;
-      background: -o-linear-gradient(top, #005CB8 0, #00080F 100%) no-repeat;
-      background: linear-gradient(top, #005CB8 0, #00080F 100%) no-repeat;
-      color: #fff;
+      background: -webkit-gradient(linear, left top, right top, color-stop(0, #c9e6e8), to(#FFFFFF)) no-repeat;
+      background: -webkit-linear-gradient(left, #c9e6e8 0, #FFFFFF 100%) no-repeat;
+      background: -o-linear-gradient(left, #c9e6e8 0, #FFFFFF 100%) no-repeat;
+      background: linear-gradient(left, #c9e6e8 0, #FFFFFF 100%) no-repeat;
+      color: #003366;
       text-decoration: none; }
   .main-menu__cb {
     padding: 0; }
@@ -90,7 +93,18 @@ header {
     font-size: 12px; }
 
 .card {
-  border: none; }
+  border: none;
+  background: -webkit-gradient(linear, right top, left top, color-stop(0, #FFFFFF), color-stop(200%, #c9e6e8)) no-repeat;
+  background: -webkit-linear-gradient(right, #FFFFFF 0, #c9e6e8 200%) no-repeat;
+  background: -o-linear-gradient(right, #FFFFFF 0, #c9e6e8 200%) no-repeat;
+  background: linear-gradient(right, #FFFFFF 0, #c9e6e8 200%) no-repeat; }
+
+.externos img {
+  border: 1px solid #bababa;
+  border-radius: 20px; }
+
+.externos p {
+  padding-left: 5px; }
 
 .container {
   -webkit-box-shadow: 1px 1px 10px grey;
@@ -101,7 +115,24 @@ header {
     max-width: 980px; } }
 
 .main-footer {
-  background: #003366;
+  background: #1f7a73;
   text-align: center;
   color: #fff;
   min-height: 50px; }
+  .main-footer__container {
+    margin: 30px; }
+  .main-footer__data {
+    padding-left: 20px; }
+  .main-footer__list {
+    list-style: none;
+    border-left: 1px solid rgba(252, 252, 238, 0.7);
+    padding-left: 20px; }
+  .main-footer__title {
+    font-size: 16px;
+    text-align: left;
+    margin-left: 0; }
+  .main-footer__item {
+    text-align: left;
+    margin-bottom: 0;
+    font-size: 13px;
+    color: rgba(252, 252, 238, 0.7); }
