--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,3 +2,9 @@ body{
     background: #f2f2f2;
 }
 
+.container{
+    background: hsl(185, 40, 95);
+    background: linear-gradient(bottom, #FFFFFF 0, hsl(185, 40, 85) 100%) no-repeat;
+    // background: hsl(185, 50, 50);
+    //background: hsl(175, 50, 50); footer
+}
