--- a/scss/theme/_footer.scss
+++ b/scss/theme/_footer.scss
@@ -1,6 +1,35 @@
 .main-footer{
-    background: #003366;
+    //background: #003366;
+    background: hsl(175, 60, 30);
     text-align: center;
     color: #fff;
     min-height: 50px;
+    
+    &__container{
+        margin: 30px;        
+        //padding-left: 0;        
+    }
+
+    &__data{
+        padding-left: 20px;
+    }
+
+    &__list{
+        list-style: none;
+        border-left: 1px solid hsla(60,67%,96%,.7);
+        padding-left: 20px;
+    }
+
+    &__title{
+        font-size: 16px;
+        text-align: left;
+        margin-left: 0;        
+    }
+
+    &__item{
+        text-align: left;        
+        margin-bottom: 0;
+        font-size: 13px;
+        color: hsla(60,67%,96%,.7);
+    }
 }
