--- a/scss/theme/_main-nav.scss
+++ b/scss/theme/_main-nav.scss
@@ -1,38 +1,39 @@
 .accordion{
     margin: 5px 4px 5px;
-    
-    
-
 }
 
 .main-menu{
 
     padding: 0;
-    // margin-left: 1px,     
+    // margin-left: 1px,
     //Sister
     &__card{
-        padding: 0;       
-        margin-bottom: 3px;        
+        padding: 0;
+        margin-bottom: 3px;
     }
 
     &__link{
-        margin-bottom: 3px;        
+        margin-bottom: 3px;
+        background: linear-gradient(right, #FFFFFF 0, hsl(185, 40, 85) 200%) no-repeat;
     }
     //end sister
 
     &__button{
-        width: 100%;        
-        border: 1px solid #BABABA;
-        background: linear-gradient(top, #FFFFFF 0, #A8A8A8 100%) no-repeat;
-        height: 30px;
+        width: 100%;
+        //border: 1px solid #BABABA;
+        border: 1px solid #003366;
+        //background: linear-gradient(top, #FFFFFF 0, #A8A8A8 100%) no-repeat;
+        // background: linear-gradient(top, rgb(222, 220, 250) 0, rgb(68, 0, 255) 100%) no-repeat;
+        // height: 30px;
         color: #003366;
         text-align: initial;
         line-height: 1em;
-        
+
         &:hover{
             border: 1px solid #BABABA;
-            background: linear-gradient(top, #005CB8 0, #00080F 100%) no-repeat;
-            color: #fff;
+            //background: linear-gradient(top, #005CB8 0, #00080F 100%) no-repeat;
+            background: linear-gradient(left, hsl(185, 40, 85) 0, #FFFFFF 100%) no-repeat;
+            color: #003366;
             text-decoration: none;
         }
     }
@@ -44,14 +45,26 @@
             border: 1px solid red;
         }
     }
-    
+
     &__sublink{
         text-align: left;
         font-size: 12px;
+        //background: white;
     }
 
 }
 
 .card{//Ojo dale una clase a este
     border: none;
+    background: linear-gradient(right, #FFFFFF 0, hsl(185, 40, 85) 200%) no-repeat;
+    
+}
+
+.externos img{
+    border: 1px solid #bababa; 
+    border-radius: 20px;   
+}
+
+.externos p{
+    padding-left: 5px;
 }
