--- a/css/styles.css
+++ b/css/styles.css
@@ -122,11 +122,24 @@ header {
   .main-footer__container {
     margin: 30px; }
   .main-footer__data {
-    padding-left: 20px; }
-  .main-footer__list {
+    position: relative; }
+  .main-footer__list li {
     list-style: none;
     border-left: 1px solid rgba(252, 252, 238, 0.7);
     padding-left: 20px; }
+  .main-footer__list::before {
+    font-size: 20px;
+    color: rgba(252, 252, 238, 0.7);
+    font-family: "escuelaentic";
+    padding-left: 10px;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    left: 0; }
+  .main-footer__col1::before {
+    content: "\63"; }
+  .main-footer__col2::before {
+    content: "\67"; }
   .main-footer__title {
     font-size: 16px;
     text-align: left;
@@ -136,3 +149,37 @@ header {
     margin-bottom: 0;
     font-size: 13px;
     color: rgba(252, 252, 238, 0.7); }
+
+.sociales-footer a {
+  margin: 0 .7em 0 0;
+  color: #1f7a73;
+  text-decoration: none; }
+  .sociales-footer a::before {
+    padding: 7px;
+    background: rgba(252, 252, 238, 0.7);
+    border-radius: 50%;
+    opacity: .7;
+    display: inline-block;
+    -webkit-transition: 500ms;
+    -o-transition: 500ms;
+    transition: 500ms; }
+
+.icon-footer:hover:before {
+  color: #fff;
+  opacity: 1;
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+  padding: 9px; }
+
+.icon-youtube:hover:before {
+  background: #ff0000; }
+
+.icon-facebook:hover:before {
+  background: #45619d; }
+
+.icon-twitter:hover:before {
+  background: #2daae2; }
+
+.icon-instagram:hover:before {
+  background: #e4435a; }
