--- a/scss/layout/_contenedor.scss
+++ b/scss/layout/_contenedor.scss
@@ -1,6 +1,6 @@
 .container{
-    //width: 980px;    
-    box-shadow: 1px 1px 10px grey;  
+    //box-shadow: 1px 1px 10px grey;  
+    box-shadow: 0 5px 5px grey;  
     
 }
   
