--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,4 +12,8 @@ $primary-color: #007bff;
 @import "theme/main";
 @import "theme/main-nav";
 @import "layout/contenedor";
+@import "theme/presentation";
 @import "theme/footer";
+@import "theme/presentation2";
+
+
