--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,26 @@ body {
   background: #f2f2f2; }
 
 .container {
-  background: #edf7f7;
-  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #FFFFFF), to(#c9e6e8)) no-repeat;
-  background: -webkit-linear-gradient(bottom, #FFFFFF 0, #c9e6e8 100%) no-repeat;
-  background: -o-linear-gradient(bottom, #FFFFFF 0, #c9e6e8 100%) no-repeat;
-  background: linear-gradient(bottom, #FFFFFF 0, #c9e6e8 100%) no-repeat; }
+  background: #fff; }
 
-header {
-  overflow: hidden; }
+.main-header {
+  padding: 0; }
+
+.main-banner__cont {
+  padding: 0;
+  position: relative; }
+
+.main-banner__img {
+  width: 100%; }
+
+.logo-absolute {
+  border-radius: 50%;
+  position: absolute;
+  top: -230px;
+  left: 10%;
+  width: 80%;
+  -webkit-box-shadow: 1px 1px 20px grey;
+  box-shadow: 1px 1px 20px grey; }
 
 .main-banner-col {
   padding: 0;
@@ -60,7 +72,8 @@ header {
   margin: 5px 4px 5px; }
 
 .main-menu {
-  padding: 0; }
+  padding: 0;
+  position: relative; }
   .main-menu__card {
     padding: 0;
     margin-bottom: 3px; }
@@ -92,7 +105,7 @@ header {
     text-align: left;
     font-size: 12px; }
 
-.card {
+.card-nav {
   border: none;
   background: -webkit-gradient(linear, right top, left top, color-stop(0, #FFFFFF), color-stop(200%, #c9e6e8)) no-repeat;
   background: -webkit-linear-gradient(right, #FFFFFF 0, #c9e6e8 200%) no-repeat;
@@ -107,12 +120,72 @@ header {
   padding-left: 5px; }
 
 .container {
-  -webkit-box-shadow: 1px 1px 10px grey;
-  box-shadow: 1px 1px 10px grey; }
+  -webkit-box-shadow: 0 5px 5px grey;
+  box-shadow: 0 5px 5px grey; }
 
 @media (min-width: 1200px) {
   .container {
     max-width: 980px; } }
+
+.presentation {
+  width: 100%;
+  -webkit-clip-path: polygon(0% 10%, 100% 20%, 100% 100%, 0% 90%);
+  clip-path: polygon(0% 10%, 100% 20%, 100% 100%, 0% 90%);
+  padding-left: 0;
+  padding-right: 0;
+  position: relative; }
+  .presentation::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #000;
+    opacity: 0.4; }
+  @media (min-width: 895px) {
+    .presentation {
+      height: 500px; } }
+  .presentation-play__link {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); }
+    .presentation-play__link::before {
+      content: "\6a";
+      font-family: "escuelaentic";
+      color: #fff;
+      opacity: .7;
+      font-size: 200px;
+      text-decoration: none;
+      -webkit-transition: 500ms;
+      -o-transition: 500ms;
+      transition: 500ms; }
+    .presentation-play__link:hover:before {
+      font-size: 220px;
+      opacity: 1;
+      cursor: pointer; }
+    .presentation-play__link__title {
+      color: #003366;
+      opacity: 1; }
+
+.presentation-play:hover:before {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
+.presentation2 {
+  width: 100%;
+  height: 400px;
+  -webkit-clip-path: polygon(0% 10%, 100% 20%, 100% 80%, 0% 100%);
+  clip-path: polygon(0% 10%, 100% 20%, 100% 80%, 0% 100%);
+  padding-left: 0;
+  padding-right: 0;
+  position: relative;
+  margin-top: -78px; }
 
 .main-footer {
   background: #1f7a73;
@@ -183,3 +256,11 @@ header {
 
 .icon-instagram:hover:before {
   background: #e4435a; }
+
+.presentation2 {
+  width: 100%;
+  -webkit-clip-path: polygon(0% 10%, 100% 20%, 100% 100%, 0% 100%);
+  clip-path: polygon(0% 10%, 100% 20%, 100% 100%, 0% 100%);
+  padding: 100px 20px 0;
+  position: relative;
+  margin-top: -78px; }
