--- a/scss/theme/_banner.scss
+++ b/scss/theme/_banner.scss
@@ -1,6 +1,41 @@
+.main-header{
+    padding: 0;
+}
+
+.main-banner{
+    
+    &__cont{
+        padding: 0;
+        position: relative;
+    }
+
+    &__logo{        
+        //position: relative;
+        //top: 20px;
+        // background: red;
+        // height: 100px;
+        //padding: 0;
+        //width: 100%;        
+    }
+
+    &__img{
+        width: 100%;
+    }
+}
+    .logo-absolute{
+        border-radius: 50%;
+        position: absolute;
+        top: -230px;
+        left: 10%;
+        width: 80%;
+        box-shadow: 1px 1px 20px grey;          
+    }
+
+
 .main-banner-col {
     padding: 0;
     position: relative;
+    
 
     &::before{
         content: "";
